--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -24,11 +24,11 @@ ul {
 }
 
 .reports-list {
-    padding-left: 0.5rem;
 }
 
     .reports-list li {
-        margin: 0.3rem;
+
+        margin: 0.3rem 0;
     }
 
         .reports-list li :hover {
@@ -43,6 +43,10 @@ ul {
         margin-bottom: 0 !important;
     }
 
+    .side-nav {
+        padding-top: 0;
+    }
+
 @media only screen {
     .side-nav {
         max-height: 200px;
@@ -54,7 +58,6 @@ ul {
 @media only screen and (min-width: 40.063em) {
 
     .side-nav {
-        padding: 0;
         overflow-x: hidden;
         overflow-y: hidden;
         max-height: none;
@@ -121,4 +124,82 @@ ul {
     left: 0;
     bottom: 0;
     right: 0;
+}
+.description-input {
+    max-width: 100%;
+    max-height: 10rem;
+    height: 4rem;
+}
+
+@-moz-keyframes slidein {
+    from {
+        -moz-transform: translateX(30px);
+        -ms-transform: translateX(30px);
+        -o-transform: translateX(30px);
+        -webkit-transform: translateX(30px);
+        transform: translateX(30px);
+    }
+
+    to {
+        -moz-transform: translateX(0);
+        -ms-transform: translateX(0);
+        -o-transform: translateX(0);
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+}
+
+@-webkit-keyframes slidein {
+    from {
+        -moz-transform: translateX(30px);
+        -ms-transform: translateX(30px);
+        -o-transform: translateX(30px);
+        -webkit-transform: translateX(30px);
+        transform: translateX(30px);
+    }
+
+    to {
+        -moz-transform: translateX(0);
+        -ms-transform: translateX(0);
+        -o-transform: translateX(0);
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+}
+
+@keyframes slidein {
+    from {
+        -moz-transform: translateX(30px);
+        -ms-transform: translateX(30px);
+        -o-transform: translateX(30px);
+        -webkit-transform: translateX(30px);
+        transform: translateX(30px);
+    }
+
+    to {
+        -moz-transform: translateX(0);
+        -ms-transform: translateX(0);
+        -o-transform: translateX(0);
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+}
+
+.content {
+    -webkit-animation: slidein 0.6s;
+    -moz-animation: slidein 0.6s;
+    -ms-animation: slidein 0.6s;
+    -o-animation: slidein 0.6s;
+    animation: slidein 0.6s;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-fill-mode: forwards;
+    -ms-animation-fill-mode: forwards;
+    -o-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    overflow: hidden;
+    -webkit-transition: opacity 0.6s ease-in-out;
+    -moz-transition: opacity 0.6s ease-in-out;
+    -ms-transition: opacity 0.6s ease-in-out;
+    -o-transition: opacity 0.6s ease-in-out;
+    transition: opacity 0.6s ease-in-out;
 }
