--- a/cloud/views/index.ejs
+++ b/cloud/views/index.ejs
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Lost and found</title>
+    <title>Fundgrube</title>
     <link href="/res/css/normalize.css" rel="stylesheet" />
     <link href="/res/css/foundation.css" rel="stylesheet" />
-    <link href="/res/css/styles.css" rel="stylesheet" />
+    <link href="/res/css/styles.css" rel="stylesheet" />	
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 
 <body>
@@ -63,26 +63,27 @@
     </div>
 
     <div id="spinner" class="hidden"></div>
-
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCNihRlhXgkhKaBb5UzntYtJFn6e0nUj0U"></script>
-    <script src="/libs/jquery-2.1.1.min.js"> </script>
-    <script src="/libs/mustache.min.js"></script>
-    <script src="/libs/common_bundle.js"></script>
-    <script src="/libs/foundation.min.js"></script>
-    <script src="/libs/spin.js"></script>
-    <script src="/libs/parse_1.3.0.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-    <script src="/src/LostAndFoundApp.js"></script>
-    <script src="/src/views/loadingView.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.4.5/js/foundation.min.js"></script>
+    <script type="text/javascript" src="http://parse.com/downloads/javascript/parse-1.3.0.min.js"></script>
 
-    <script src="/src/views/icon.js"></script>
+    <script type="text/javascript" src="/libs/common_bundle.js"></script>
+    <script type="text/javascript" src="/libs/spin.js"></script>
 
-    <script src="/src/model/primivites/primitivesmodel.js"></script>
-    <script src="/src/model/requests/requestsbundle.js"></script>
-    <script src="/src/model/_modelbundle.js"></script>
+    <script type="text/javascript" src="/src/LostAndFoundApp.js"></script>
 
-    <script src="/src/model/dummy/primivites/dummyprimivitesbundle.js"></script>
-    <script src="/src/model/dummy/_modelbundle.js"></script>
+    <script type="text/javascript" src="/src/model/primivites/primitivesmodel.js"></script>
+    <script type="text/javascript" src="/src/model/requests/requestsbundle.js"></script>
+    <script type="text/javascript" src="/src/model/_modelbundle.js"></script>
+    <script type="text/javascript" src="/src/model/dummy/primivites/dummyprimivitesbundle.js"></script>
+    <script type="text/javascript" src="/src/model/dummy/_modelbundle.js"></script>
+	
+    <script type="text/javascript" src="/src/views/loadingView.js"></script>
+    <script type="text/javascript" src="/src/views/icon.js"></script>
+
     <script>
         $(document).foundation();
     </script>
