--- a/cloud/views/report_meta.ejs
+++ b/cloud/views/report_meta.ejs
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<% 
+<%
 
 var r = JSON.parse(report);
 var c = JSON.parse(category);
@@ -30,9 +30,20 @@ if(r.image){
 <html>
 
 <head>
+    <title><%= title %></title>
+    <meta name="description" content="<%= description %>" />
+
     <meta property="og:title" content="<%= title %>" />
     <meta property="og:description" content="<%= description %>" />
-    <meta property="og:image" content="<%= image%>"/>
+    <meta property="og:image" content="<%= image%>" />
+
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@DieFundgrube" />
+    <meta name="twitter:description" content="<%= description %>" />
+    <meta name="twitter:title" content="<%= title %>" />
+    <meta name="twitter:image" content="<%= image %>" />
+
 </head>
 <body>
     <script>
