--- a/cloud/views/index.ejs
+++ b/cloud/views/index.ejs
@@ -1,92 +1,21 @@
 ﻿<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Fundgrube</title>
-    <link href="/res/css/normalize.css" rel="stylesheet" />
-    <link href="/res/css/foundation.css" rel="stylesheet" />
-    <link href="/res/css/styles.css" rel="stylesheet" />	
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    {{ include static_head.ejs }}
 </head>
-
 <body>
-    <div id="fb-root"></div>
-    <script>
-        window.fbAsyncInit = function () {
-            FB.init({
-                appId: '1550946045139570',
-                xfbml: true,
-                version: 'v2.1'
-            });
-        };
-
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) { return; }
-            js = d.createElement(s); js.id = id;
-            js.src = "//connect.facebook.net/en_US/sdk.js";
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
+    {{ if(locals.city) { }}
+    <script> var city = 
+        {{- JSON.stringify(locals.city) }};
     </script>
-    <div div class="contain-to-grid fixed">
-        <nav class="top-bar" data-topbar>
-            <ul class="title-area">
-                <li class="name">
-                    <h1><a href="#/">Lost and found</a></h1>
-                </li>
+    {{ } }}
+    {{ include static_body_header.ejs }}
+    {{ include static_body_footer.ejs }}
+    {{ include static_includes.ejs }}
 
-                <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-                <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-            </ul>
-
-            <section class="top-bar-section">
-                <!-- Right Nav Section -->
-                <ul class="right">
-                    <li class="active"><a href="#/submitReport">Anzeige anlegen</a></li>
-                </ul>
-
-                <!-- Left Nav Section -->
-                <ul class="left">
-                    <!--<li><a href="#">Left Nav Button</a></li>-->
-                </ul>
-            </section>
-        </nav>
-    </div>
-    <div style="position: relative">
-        <div id="frame"></div>
-    </div>
-
-    <div id="modal" class="reveal-modal" data-reveal>
-        <div id="modal-frame" class="modal-frame">
-        </div>
-    </div>
-
-    <div id="spinner" class="hidden"></div>
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCNihRlhXgkhKaBb5UzntYtJFn6e0nUj0U"></script>
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.4.5/js/foundation.min.js"></script>
-    <script type="text/javascript" src="http://parse.com/downloads/javascript/parse-1.3.0.min.js"></script>
-
-    <script type="text/javascript" src="/libs/common_bundle.js"></script>
-    <script type="text/javascript" src="/libs/spin.js"></script>
-
-    <script type="text/javascript" src="/src/LostAndFoundApp.js"></script>
-
-    <script type="text/javascript" src="/src/model/primivites/primitivesmodel.js"></script>
-    <script type="text/javascript" src="/src/model/requests/requestsbundle.js"></script>
-    <script type="text/javascript" src="/src/model/_modelbundle.js"></script>
-    <script type="text/javascript" src="/src/model/dummy/primivites/dummyprimivitesbundle.js"></script>
-    <script type="text/javascript" src="/src/model/dummy/_modelbundle.js"></script>
-	
-    <script type="text/javascript" src="/src/views/loadingView.js"></script>
-    <script type="text/javascript" src="/src/views/icon.js"></script>
-
-    <script>
-        $(document).foundation();
-    </script>
+        <script>
+            $(document).foundation();
+        </script>
     <script>
         LostAndFound.App.init();
     </script>
