favi-, apple-touch- & new map icons

--- a/cloud/views/static_report.ejs
+++ b/cloud/views/static_report.ejs
@@ -68,7 +68,7 @@ if(r.image){
                                 <div class="columns medium-7">
                                     <h3 class="subheader">{{=title}}</h3>
                                     {{ if(report.reward){ }}
-                    <h5 class="subheader">{{=reward}} € Finderlohn </h5>
+                    <h5 class="subheader">{{=report.reward}} € Finderlohn </h5>
                                     {{ } }}
                                 </div>
                             </div>
