--- a/cloud/views/static_head.ejs
+++ b/cloud/views/static_head.ejs
@@ -1,6 +1,10 @@
-﻿    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+﻿<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <link rel="apple-touch-icon" href="/apple-touch-icon-precomposed.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+      
     <link href="/res/css/normalize.css" rel="stylesheet" />
     <link href="/res/css/foundation.css" rel="stylesheet" />
     <link href="/res/css/styles.css" rel="stylesheet" />
+  
